5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4145/executions/1674_1880.log
== TEST (2019-04-30 11:43:55) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m = int(input("mes do ano: "))
if(1<=m<=12):
	if(m==1):
		m="janeiro"
	elif(m==2):
		m="fevereiro"
	elif(m==3):
		m="marco"
	elif(m==4):
		m="abril"
	elif(m==5):
		m="maio"
	elif(m==6):
		m="junho"
	elif(m==7):
		m="julho"
	elif(m==8):
		m="agosto"
	elif(m==9):
		m="setembro"
	elif(m==10):
		m="outubro"
	elif(m==11):
		m="novembro"
	elif(m==12)
		m="dezembro"
	print(m)	
else:		
	print("numero do mes invalido")
-- ERROR:
File "XXXX", line 26
    elif(m==12)
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 11:44:08) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m = int(input("mes do ano: "))
if(1<=m<=12):
	if(m==1):
		m="janeiro"
	elif(m==2):
		m="fevereiro"
	elif(m==3):
		m="marco"
	elif(m==4):
		m="abril"
	elif(m==5):
		m="maio"
	elif(m==6):
		m="junho"
	elif(m==7):
		m="julho"
	elif(m==8):
		m="agosto"
	elif(m==9):
		m="setembro"
	elif(m==10):
		m="outubro"
	elif(m==11):
		m="novembro"
	elif(m==12):
		m="dezembro"
	print(m)	
else:		
	print("numero do mes invalido")
-- OUTPUT:
abril
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 11:44:13) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m = int(input("mes do ano: "))
if(1<=m<=12):
	if(m==1):
		m="janeiro"
	elif(m==2):
		m="fevereiro"
	elif(m==3):
		m="marco"
	elif(m==4):
		m="abril"
	elif(m==5):
		m="maio"
	elif(m==6):
		m="junho"
	elif(m==7):
		m="julho"
	elif(m==8):
		m="agosto"
	elif(m==9):
		m="setembro"
	elif(m==10):
		m="outubro"
	elif(m==11):
		m="novembro"
	elif(m==12):
		m="dezembro"
	print(m)	
else:		
	print("numero do mes invalido")
-- EXECUTION TIME:
0.183896
-- TEST CASE 1:
---- input:
4
---- correct output:
abril
---- user output:
abril
-- TEST CASE 2:
---- input:
5
---- correct output:
maio
---- user output:
maio
-- TEST CASE 3:
---- input:
16
---- correct output:
numero de mes invalido
---- user output:
numero do mes invalido
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 11:44:21) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m = int(input("mes do ano: "))
if(1<=m<=12):
	if(m==1):
		m="janeiro"
	elif(m==2):
		m="fevereiro"
	elif(m==3):
		m="marco"
	elif(m==4):
		m="abril"
	elif(m==5):
		m="maio"
	elif(m==6):
		m="junho"
	elif(m==7):
		m="julho"
	elif(m==8):
		m="agosto"
	elif(m==9):
		m="setembro"
	elif(m==10):
		m="outubro"
	elif(m==11):
		m="novembro"
	elif(m==12):
		m="dezembro"
	print(m)	
else:		
	print("numero do mes invalido")
-- OUTPUT:
abril
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 11:44:43) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m = int(input("mes do ano: "))
if(1<=m<=12):
	if(m==1):
		m="janeiro"
	elif(m==2):
		m="fevereiro"
	elif(m==3):
		m="marco"
	elif(m==4):
		m="abril"
	elif(m==5):
		m="maio"
	elif(m==6):
		m="junho"
	elif(m==7):
		m="julho"
	elif(m==8):
		m="agosto"
	elif(m==9):
		m="setembro"
	elif(m==10):
		m="outubro"
	elif(m==11):
		m="novembro"
	elif(m==12):
		m="dezembro"
	print(m)	
else:		
	print("numero do mes invalido")
-- OUTPUT:
abril
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 11:44:46) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m = int(input("mes do ano: "))
if(1<=m<=12):
	if(m==1):
		m="janeiro"
	elif(m==2):
		m="fevereiro"
	elif(m==3):
		m="marco"
	elif(m==4):
		m="abril"
	elif(m==5):
		m="maio"
	elif(m==6):
		m="junho"
	elif(m==7):
		m="julho"
	elif(m==8):
		m="agosto"
	elif(m==9):
		m="setembro"
	elif(m==10):
		m="outubro"
	elif(m==11):
		m="novembro"
	elif(m==12):
		m="dezembro"
	print(m)	
else:		
	print("numero do mes invalido")
-- OUTPUT:
abril
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 11:44:49) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m = int(input("mes do ano: "))
if(1<=m<=12):
	if(m==1):
		m="janeiro"
	elif(m==2):
		m="fevereiro"
	elif(m==3):
		m="marco"
	elif(m==4):
		m="abril"
	elif(m==5):
		m="maio"
	elif(m==6):
		m="junho"
	elif(m==7):
		m="julho"
	elif(m==8):
		m="agosto"
	elif(m==9):
		m="setembro"
	elif(m==10):
		m="outubro"
	elif(m==11):
		m="novembro"
	elif(m==12):
		m="dezembro"
	print(m)	
else:		
	print("numero do mes invalido")
-- OUTPUT:
abril
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 11:45:17) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m = int(input("mes do ano: "))
if(1<=m<=12):
	if(m==1):
		m="janeiro"
	elif(m==2):
		m="fevereiro"
	elif(m==3):
		m="marco"
	elif(m==4):
		m="abril"
	elif(m==5):
		m="maio"
	elif(m==6):
		m="junho"
	elif(m==7):
		m="julho"
	elif(m==8):
		m="agosto"
	elif(m==9):
		m="setembro"
	elif(m==10):
		m="outubro"
	elif(m==11):
		m="novembro"
	elif(m==12):
		m="dezembro"
	print(m)	
else:		
	print("numero do mes invalido")
-- OUTPUT:
abril
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 11:45:20) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m = int(input("mes do ano: "))
if(1<=m<=12):
	if(m==1):
		m="janeiro"
	elif(m==2):
		m="fevereiro"
	elif(m==3):
		m="marco"
	elif(m==4):
		m="abril"
	elif(m==5):
		m="maio"
	elif(m==6):
		m="junho"
	elif(m==7):
		m="julho"
	elif(m==8):
		m="agosto"
	elif(m==9):
		m="setembro"
	elif(m==10):
		m="outubro"
	elif(m==11):
		m="novembro"
	elif(m==12):
		m="dezembro"
	print(m)	
else:		
	print("numero do mes invalido")
-- OUTPUT:
abril
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 11:45:21) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m = int(input("mes do ano: "))
if(1<=m<=12):
	if(m==1):
		m="janeiro"
	elif(m==2):
		m="fevereiro"
	elif(m==3):
		m="marco"
	elif(m==4):
		m="abril"
	elif(m==5):
		m="maio"
	elif(m==6):
		m="junho"
	elif(m==7):
		m="julho"
	elif(m==8):
		m="agosto"
	elif(m==9):
		m="setembro"
	elif(m==10):
		m="outubro"
	elif(m==11):
		m="novembro"
	elif(m==12):
		m="dezembro"
	print(m)	
else:		
	print("numero do mes invalido")
-- OUTPUT:
abril
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 11:45:26) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m = int(input("mes do ano: "))
if(1<=m<=12):
	if(m==1):
		m="janeiro"
	elif(m==2):
		m="fevereiro"
	elif(m==3):
		m="marco"
	elif(m==4):
		m="abril"
	elif(m==5):
		m="maio"
	elif(m==6):
		m="junho"
	elif(m==7):
		m="julho"
	elif(m==8):
		m="agosto"
	elif(m==9):
		m="setembro"
	elif(m==10):
		m="outubro"
	elif(m==11):
		m="novembro"
	elif(m==12):
		m="dezembro"
	print(m)	
else:		
	print("numero do mes invalido")
-- OUTPUT:
abril
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 11:45:28) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m = int(input("mes do ano: "))
if(1<=m<=12):
	if(m==1):
		m="janeiro"
	elif(m==2):
		m="fevereiro"
	elif(m==3):
		m="marco"
	elif(m==4):
		m="abril"
	elif(m==5):
		m="maio"
	elif(m==6):
		m="junho"
	elif(m==7):
		m="julho"
	elif(m==8):
		m="agosto"
	elif(m==9):
		m="setembro"
	elif(m==10):
		m="outubro"
	elif(m==11):
		m="novembro"
	elif(m==12):
		m="dezembro"
	print(m)	
else:		
	print("numero do mes invalido")
-- OUTPUT:
abril
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 11:45:30) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m = int(input("mes do ano: "))
if(1<=m<=12):
	if(m==1):
		m="janeiro"
	elif(m==2):
		m="fevereiro"
	elif(m==3):
		m="marco"
	elif(m==4):
		m="abril"
	elif(m==5):
		m="maio"
	elif(m==6):
		m="junho"
	elif(m==7):
		m="julho"
	elif(m==8):
		m="agosto"
	elif(m==9):
		m="setembro"
	elif(m==10):
		m="outubro"
	elif(m==11):
		m="novembro"
	elif(m==12):
		m="dezembro"
	print(m)	
else:		
	print("numero do mes invalido")
-- OUTPUT:
abril
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 11:45:33) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m = int(input("mes do ano: "))
if(1<=m<=12):
	if(m==1):
		m="janeiro"
	elif(m==2):
		m="fevereiro"
	elif(m==3):
		m="marco"
	elif(m==4):
		m="abril"
	elif(m==5):
		m="maio"
	elif(m==6):
		m="junho"
	elif(m==7):
		m="julho"
	elif(m==8):
		m="agosto"
	elif(m==9):
		m="setembro"
	elif(m==10):
		m="outubro"
	elif(m==11):
		m="novembro"
	elif(m==12):
		m="dezembro"
	print(m)	
else:		
	print("numero do mes invalido")
-- OUTPUT:
abril
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 11:45:35) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m = int(input("mes do ano: "))
if(1<=m<=12):
	if(m==1):
		m="janeiro"
	elif(m==2):
		m="fevereiro"
	elif(m==3):
		m="marco"
	elif(m==4):
		m="abril"
	elif(m==5):
		m="maio"
	elif(m==6):
		m="junho"
	elif(m==7):
		m="julho"
	elif(m==8):
		m="agosto"
	elif(m==9):
		m="setembro"
	elif(m==10):
		m="outubro"
	elif(m==11):
		m="novembro"
	elif(m==12):
		m="dezembro"
	print(m)	
else:		
	print("numero do mes invalido")
-- OUTPUT:
abril
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 11:45:37) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m = int(input("mes do ano: "))
if(1<=m<=12):
	if(m==1):
		m="janeiro"
	elif(m==2):
		m="fevereiro"
	elif(m==3):
		m="marco"
	elif(m==4):
		m="abril"
	elif(m==5):
		m="maio"
	elif(m==6):
		m="junho"
	elif(m==7):
		m="julho"
	elif(m==8):
		m="agosto"
	elif(m==9):
		m="setembro"
	elif(m==10):
		m="outubro"
	elif(m==11):
		m="novembro"
	elif(m==12):
		m="dezembro"
	print(m)	
else:		
	print("numero do mes invalido")
-- OUTPUT:
abril
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 11:45:39) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m = int(input("mes do ano: "))
if(1<=m<=12):
	if(m==1):
		m="janeiro"
	elif(m==2):
		m="fevereiro"
	elif(m==3):
		m="marco"
	elif(m==4):
		m="abril"
	elif(m==5):
		m="maio"
	elif(m==6):
		m="junho"
	elif(m==7):
		m="julho"
	elif(m==8):
		m="agosto"
	elif(m==9):
		m="setembro"
	elif(m==10):
		m="outubro"
	elif(m==11):
		m="novembro"
	elif(m==12):
		m="dezembro"
	print(m)	
else:		
	print("numero do mes invalido")
-- OUTPUT:
abril
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 11:45:41) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m = int(input("mes do ano: "))
if(1<=m<=12):
	if(m==1):
		m="janeiro"
	elif(m==2):
		m="fevereiro"
	elif(m==3):
		m="marco"
	elif(m==4):
		m="abril"
	elif(m==5):
		m="maio"
	elif(m==6):
		m="junho"
	elif(m==7):
		m="julho"
	elif(m==8):
		m="agosto"
	elif(m==9):
		m="setembro"
	elif(m==10):
		m="outubro"
	elif(m==11):
		m="novembro"
	elif(m==12):
		m="dezembro"
	print(m)	
else:		
	print("numero do mes invalido")
-- OUTPUT:
abril
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 11:45:44) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m = int(input("mes do ano: "))
if(1<=m<=12):
	if(m==1):
		m="janeiro"
	elif(m==2):
		m="fevereiro"
	elif(m==3):
		m="marco"
	elif(m==4):
		m="abril"
	elif(m==5):
		m="maio"
	elif(m==6):
		m="junho"
	elif(m==7):
		m="julho"
	elif(m==8):
		m="agosto"
	elif(m==9):
		m="setembro"
	elif(m==10):
		m="outubro"
	elif(m==11):
		m="novembro"
	elif(m==12):
		m="dezembro"
	print(m)	
else:		
	print("numero do mes invalido")
-- OUTPUT:
abril
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 11:45:46) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m = int(input("mes do ano: "))
if(1<=m<=12):
	if(m==1):
		m="janeiro"
	elif(m==2):
		m="fevereiro"
	elif(m==3):
		m="marco"
	elif(m==4):
		m="abril"
	elif(m==5):
		m="maio"
	elif(m==6):
		m="junho"
	elif(m==7):
		m="julho"
	elif(m==8):
		m="agosto"
	elif(m==9):
		m="setembro"
	elif(m==10):
		m="outubro"
	elif(m==11):
		m="novembro"
	elif(m==12):
		m="dezembro"
	print(m)	
else:		
	print("numero do mes invalido")
-- OUTPUT:
abril
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 11:45:50) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m = int(input("mes do ano: "))
if(1<=m<=12):
	if(m==1):
		m="janeiro"
	elif(m==2):
		m="fevereiro"
	elif(m==3):
		m="marco"
	elif(m==4):
		m="abril"
	elif(m==5):
		m="maio"
	elif(m==6):
		m="junho"
	elif(m==7):
		m="julho"
	elif(m==8):
		m="agosto"
	elif(m==9):
		m="setembro"
	elif(m==10):
		m="outubro"
	elif(m==11):
		m="novembro"
	elif(m==12):
		m="dezembro"
	print(m)	
else:		
	print("numero do mes invalido")
-- OUTPUT:
abril
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 11:45:52) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m = int(input("mes do ano: "))
if(1<=m<=12):
	if(m==1):
		m="janeiro"
	elif(m==2):
		m="fevereiro"
	elif(m==3):
		m="marco"
	elif(m==4):
		m="abril"
	elif(m==5):
		m="maio"
	elif(m==6):
		m="junho"
	elif(m==7):
		m="julho"
	elif(m==8):
		m="agosto"
	elif(m==9):
		m="setembro"
	elif(m==10):
		m="outubro"
	elif(m==11):
		m="novembro"
	elif(m==12):
		m="dezembro"
	print(m)	
else:		
	print("numero do mes invalido")
-- OUTPUT:
abril
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 11:45:57) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m = int(input("mes do ano: "))
if(1<=m<=12):
	if(m==1):
		m="janeiro"
	elif(m==2):
		m="fevereiro"
	elif(m==3):
		m="marco"
	elif(m==4):
		m="abril"
	elif(m==5):
		m="maio"
	elif(m==6):
		m="junho"
	elif(m==7):
		m="julho"
	elif(m==8):
		m="agosto"
	elif(m==9):
		m="setembro"
	elif(m==10):
		m="outubro"
	elif(m==11):
		m="novembro"
	elif(m==12):
		m="dezembro"
	print(m)	
else:		
	print("numero do mes invalido")
-- OUTPUT:
abril
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 11:46:08) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m = int(input("mes do ano: "))
if(1<=m<=12):
	if(m==1):
		m="janeiro"
	elif(m==2):
		m="fevereiro"
	elif(m==3):
		m="marco"
	elif(m==4):
		m="abril"
	elif(m==5):
		m="maio"
	elif(m==6):
		m="junho"
	elif(m==7):
		m="julho"
	elif(m==8):
		m="agosto"
	elif(m==9):
		m="setembro"
	elif(m==10):
		m="outubro"
	elif(m==11):
		m="novembro"
	elif(m==12):
		m="dezembro"
	print(m)	
else:		
	print("numero do mes invalido")
-- OUTPUT:
abril
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 11:47:02) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m = int(input("mes do ano: "))
if(1<=m<=12):
	if(m==1):
		m="janeiro"
	elif(m==2):
		m="fevereiro"
	elif(m==3):
		m="marco"
	elif(m==4):
		m="abril"
	elif(m==5):
		m="maio"
	elif(m==6):
		m="junho"
	elif(m==7):
		m="julho"
	elif(m==8):
		m="agosto"
	elif(m==9):
		m="setembro"
	elif(m==10):
		m="outubro"
	elif(m==11):
		m="novembro"
	elif(m==12):
		m="dezembro"
	print(m)	
else:		
	print("numero de mes invalido")
-- EXECUTION TIME:
0.154662
-- TEST CASE 1:
---- input:
4
---- correct output:
abril
---- user output:
abril
-- TEST CASE 2:
---- input:
5
---- correct output:
maio
---- user output:
maio
-- TEST CASE 3:
---- input:
16
---- correct output:
numero de mes invalido
---- user output:
numero de mes invalido
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
